Features add, backend update

--- a/app/admin.html
+++ b/app/admin.html
@@ -4,81 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Scrumble Admin</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Space+Grotesk:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="admin.css" />
+    <meta http-equiv="refresh" content="0; url=/admin/" />
+    <link rel="canonical" href="/admin/" />
   </head>
   <body>
-    <div class="page">
-      <header class="admin-header">
-        <h1 style="font-size: 2rem; margin-bottom: 10px;">SCRUMBLE ADMIN</h1>
-        <div id="admin-status" style="color: var(--muted); font-size: 0.9rem;"></div>
-      </header>
-
-      <div class="admin-tabs">
-        <button class="tab-btn active" data-tab="submissions">Submissions</button>
-        <button class="tab-btn" data-tab="active">Active Matchup</button>
-        <button class="tab-btn" data-tab="history">History</button>
-        <button class="tab-btn" data-tab="settings">Settings</button>
-      </div>
-
-      <main class="admin-content">
-        <!-- Submissions Tab -->
-        <div class="tab-panel active" id="tab-submissions">
-          <div class="panel">
-            <h3>Pending Submissions</h3>
-            <div id="submissions-list" style="margin-top: 20px;"></div>
-          </div>
-        </div>
-
-        <!-- Active Matchup Tab -->
-        <div class="tab-panel" id="tab-active">
-          <div class="panel">
-            <h3>Current Active Matchup</h3>
-            <div id="active-matchup" style="margin-top: 20px;"></div>
-          </div>
-          
-          <div class="panel" style="margin-top: 20px;">
-            <h3>Set Active Matchup</h3>
-            <form id="activate-form" style="margin-top: 20px;">
-              <input type="text" id="activate-id" placeholder="Matchup ID (e.g. m002)" style="width: 100%; padding: 12px; border-radius: 12px; border: 1px solid var(--line); background: var(--bg); color: var(--ink); font-family: inherit; margin-bottom: 12px;">
-              <button type="submit" class="btn primary">Activate</button>
-              <div id="activate-status" style="margin-top: 10px; font-size: 0.9rem;"></div>
-            </form>
-          </div>
-        </div>
-
-        <!-- History Tab -->
-        <div class="tab-panel" id="tab-history">
-          <div class="panel">
-            <h3>All Matchups</h3>
-            <div id="history-list" style="margin-top: 20px;"></div>
-          </div>
-        </div>
-
-        <!-- Settings Tab -->
-        <div class="tab-panel" id="tab-settings">
-          <div class="panel">
-            <h3>Admin Key</h3>
-            <form id="key-form" style="margin-top: 20px;">
-              <input type="password" id="admin-key" placeholder="Enter admin key" style="width: 100%; padding: 12px; border-radius: 12px; border: 1px solid var(--line); background: var(--bg); color: var(--ink); font-family: inherit; margin-bottom: 12px;">
-              <div style="display: flex; gap: 12px;">
-                <button type="submit" class="btn primary">Save Key</button>
-                <button type="button" id="clear-key" class="btn ghost">Clear</button>
-              </div>
-              <div id="key-status" style="margin-top: 10px; font-size: 0.9rem;"></div>
-            </form>
-          </div>
-        </div>
-      </main>
-    </div>
-
-    <script src="config.js"></script>
-    <script src="admin.js"></script>
+    <p>Redirecting to <a href="/admin/">/admin/</a>…</p>
   </body>
 </html>
