Add custom comments, admin overlay, email forwarding, UI polish
- Custom comment system (DynamoDB, expandable sections, seed feature)
- Admin mode overlay on main page (session-based auth, inline controls)
- Admin dashboard redesign (active/inactive split, scheduling)
- Email forwarding: hello@scrumble.cc -> jon@theatrico.org
- UI improvements: fighter backgrounds, mobile layout, favicon
- Updated documentation (AGENTS.md, IMPLEMENTATION_NOTES.md)
- Enhanced .gitignore (media, Python, secrets)

--- a/app/about.html
+++ b/app/about.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="navbar-brand">SCRUMBLE</div>
+      <a href="/" class="navbar-brand" style="text-decoration: none; color: inherit;">SCRUMBLE</a>
       <button class="navbar-toggle" aria-label="Toggle menu">
         <span></span>
         <span></span>
@@ -38,7 +38,9 @@
 
       <main>
         <section class="arena" style="max-width: 700px; margin: 0 auto; min-height: 400px;">
-          
+          <p style="margin-bottom: 20px;">Scrumble is a daily voting platform for Chattanooga's best local spots, food, and culture.</p>
+          <p style="margin-bottom: 20px;">One matchup. One vote. Fast, local, done.</p>
+          <p style="margin-bottom: 20px;">Questions or feedback? Email us at <a href="mailto:hello@scrumble.cc" style="color: var(--accent);">hello@scrumble.cc</a></p>
         </section>
       </main>
     </div>
