--- a/app/history.html
+++ b/app/history.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="navbar-brand">SCRUMBLE</div>
+      <a href="/" class="navbar-brand" style="text-decoration: none; color: inherit;">SCRUMBLE</a>
       <button class="navbar-toggle" aria-label="Toggle menu">
         <span></span>
         <span></span>
