--- a/app/jobs.html
+++ b/app/jobs.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="navbar-brand">SCRUMBLE</div>
+      <a href="/" class="navbar-brand" style="text-decoration: none; color: inherit;">SCRUMBLE</a>
       <button class="navbar-toggle" aria-label="Toggle menu">
         <span></span>
         <span></span>
@@ -65,7 +65,7 @@
 
           <div class="panel" style="text-align: center; background: var(--bg); border: 2px solid var(--nav-accent);">
             <p style="color: var(--nav-accent); font-weight: 600;">
-              Interested? Email us: <a href="mailto:jobs@scrumble.cc" style="color: var(--nav-accent); text-decoration: underline;">jobs@scrumble.cc</a>
+              Interested? Email us: <a href="mailto:hello@scrumble.cc" style="color: var(--nav-accent); text-decoration: underline;">hello@scrumble.cc</a>
             </p>
           </div>
         </section>
