Ship week-1 growth features: partner page, history filters, recap page, share-card + analytics events

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <li><a href="#arena">Vote</a></li>
         <li><a href="submit.html">Submit</a></li>
         <li><a href="history.html">History</a></li>
+        <li><a href="partner.html">Partner</a></li>
         <li><a href="posters.html">Art</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="jobs.html">Jobs</a></li>
@@ -128,6 +129,7 @@
           <article class="panel">
             <h4>Bring the heat</h4>
             <p><a href="submit.html" style="color: var(--accent); text-decoration: none;">Submit a matchup</a> and we'll get it in the ring.</p>
+            <p style="margin-top:8px;"><a href="partner.html" style="color: var(--accent); text-decoration: none;">Partner with Scrumble</a> for sponsored matchups.</p>
           </article>
         </section>
       </main>
