--- a/app/about.html
+++ b/app/about.html
@@ -24,6 +24,7 @@
         <li><a href="index.html#arena">Vote</a></li>
         <li><a href="submit.html">Submit</a></li>
         <li><a href="history.html">History</a></li>
+        <li><a href="partner.html">Partner</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="jobs.html">Jobs</a></li>
         <li><button class="theme-toggle" type="button" aria-label="Cycle theme">Theme</button></li>
@@ -37,10 +38,12 @@
       </header>
 
       <main>
-        <section class="arena" style="max-width: 700px; margin: 0 auto; min-height: 400px;">
-          <p style="margin-bottom: 20px;">Scrumble is a daily voting platform for Chattanooga's best local spots, food, and culture.</p>
-          <p style="margin-bottom: 20px;">One matchup. One vote. Fast, local, done.</p>
-          <p style="margin-bottom: 20px;">Questions or feedback? Email us at <a href="mailto:hello@scrumble.cc" style="color: var(--accent);">hello@scrumble.cc</a></p>
+        <section class="arena" style="max-width: 760px; margin: 0 auto; min-height: 400px;">
+          <p style="margin-bottom: 20px;">Scrumble is a Chattanooga-first daily vote on local culture, food, neighborhoods, and nightlife.</p>
+          <p style="margin-bottom: 20px;">We keep it simple: two options, one choice, quick results.</p>
+          <p style="margin-bottom: 20px;"><strong>Vote integrity:</strong> votes are rate-limited and monitored for suspicious patterns to keep results useful and fair.</p>
+          <p style="margin-bottom: 20px;"><strong>Editorial style:</strong> curated local matchups, not generic directory listings.</p>
+          <p style="margin-bottom: 20px;">Questions, press, or partnerships? Email <a href="mailto:hello@scrumble.cc" style="color: var(--accent);">hello@scrumble.cc</a>.</p>
         </section>
       </main>
     </div>
