--- a/app/jobs.html
+++ b/app/jobs.html
@@ -24,6 +24,7 @@
         <li><a href="index.html#arena">Vote</a></li>
         <li><a href="submit.html">Submit</a></li>
         <li><a href="history.html">History</a></li>
+        <li><a href="partner.html">Partner</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="jobs.html">Jobs</a></li>
         <li><button class="theme-toggle" type="button" aria-label="Cycle theme">Theme</button></li>
