Implement growth backlog items 2-12: share/copy UX, newsletter endpoint, rate limit, category pages

--- a/app/history.html
+++ b/app/history.html
@@ -40,6 +40,7 @@
       <main>
         <section class="history-section">
           <div class="panel" style="margin-bottom: 16px; display: grid; gap: 10px;">
+            <div class="tiny" style="color: var(--muted);">Want your brand featured in weekly matchups? <a href="partner.html" style="color: var(--accent); text-decoration: none;">Partner with Scrumble</a>.</div>
             <div style="display: grid; gap: 10px; grid-template-columns: 1fr 1fr auto;">
               <input id="history-search" type="text" placeholder="Search matchup, winner, or category" style="padding: 10px; border-radius: 10px; border: 1px solid var(--line); background: var(--bg); color: var(--ink);" />
               <select id="history-category" style="padding: 10px; border-radius: 10px; border: 1px solid var(--line); background: var(--bg); color: var(--ink);">
