--- a/app/weekly-recap.html
+++ b/app/weekly-recap.html
@@ -89,6 +89,7 @@
             <article class="panel">
               <h4>Want your matchup featured?</h4>
               <p style="margin-top:10px;"><a href="submit.html" style="color: var(--accent); text-decoration:none;">Submit it here</a>.</p>
+              <p style="margin-top:8px;">Want sponsorship? <a href="partner.html" style="color: var(--accent); text-decoration:none;">See partner options</a>.</p>
             </article>
           `;
         } catch (err) {
