Load visit tracker on core pages for visitor monitoring

--- a/app/index.html
+++ b/app/index.html
@@ -171,6 +171,7 @@
     <div class="toast" id="toast" role="status" aria-live="polite"></div>
 
     <script src="config.js"></script>
+    <script src="visit.js"></script>
     <script src="theme.js"></script>
     <script src="main.js"></script>
     <script>
