--- a/app/weekly-recap.html
+++ b/app/weekly-recap.html
@@ -39,6 +39,7 @@
     </div>
 
     <script src="config.js"></script>
+    <script src="visit.js"></script>
     <script>
       const API_BASE = (window.SCRUMBLE_API_BASE || '').trim();
       const API_URL = API_BASE.endsWith('/') ? API_BASE.slice(0, -1) : API_BASE;
