--- a/app/history.html
+++ b/app/history.html
@@ -59,6 +59,7 @@
     </div>
 
     <script src="config.js"></script>
+    <script src="visit.js"></script>
     <script src="theme.js"></script>
     <script>
       const API_BASE = (window.SCRUMBLE_API_BASE || "").trim();
