feat: update site pages and backend content/routes

--- a/app/about.html
+++ b/app/about.html
@@ -4,6 +4,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About - Scrumble</title>
+    <!-- SEO: page meta bundle -->
+    <link rel="canonical" href="https://scrumble.cc/about.html" />
+    <meta name="description" content="Learn what Scrumble is, how Chattanooga matchups are curated, and how vote integrity is protected." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="About - Scrumble" />
+    <meta property="og:description" content="Learn what Scrumble is, how Chattanooga matchups are curated, and how vote integrity is protected." />
+    <meta property="og:url" content="https://scrumble.cc/about.html" />
+    <meta property="og:site_name" content="Scrumble" />
+    <meta property="og:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="About - Scrumble" />
+    <meta name="twitter:description" content="Learn what Scrumble is, how Chattanooga matchups are curated, and how vote integrity is protected." />
+    <meta name="twitter:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "About - Scrumble",
+      "description": "Learn what Scrumble is, how Chattanooga matchups are curated, and how vote integrity is protected.",
+      "url": "https://scrumble.cc/about.html",
+      "isPartOf": { "@type": "WebSite", "name": "Scrumble", "url": "https://scrumble.cc/" }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,6 +67,7 @@
           <p style="margin-bottom: 20px;"><strong>Vote integrity:</strong> votes are rate-limited and monitored for suspicious patterns to keep results useful and fair.</p>
           <p style="margin-bottom: 20px;"><strong>Editorial style:</strong> curated local matchups, not generic directory listings.</p>
           <p style="margin-bottom: 20px;">Questions, press, or partnerships? Email <a href="mailto:hello@scrumble.cc" style="color: var(--accent);">hello@scrumble.cc</a>.</p>
+          <p style="margin-bottom: 20px;"><strong>New:</strong> <a href="openclaw-operations-case-study.html" style="color: var(--accent);">How OpenClaw helps run Scrumble</a> and <a href="agentic-ai-startup-services-chattanooga.html" style="color: var(--accent);">Agentic AI startup help in Chattanooga</a>.</p>
         </section>
       </main>
     </div>
