--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,30 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Scrumble - Vote on Chattanooga's Best Restaurants, Businesses & More</title>
-    <link rel="icon" type="image/x-icon" href="public/scrumble_favicon.ico" />
+    <!-- SEO: page meta bundle -->
     <link rel="canonical" href="https://scrumble.cc/" />
+    <meta name="description" content="Scrumble - Vote on Chattanooga's Best Restaurants, Businesses & More on Scrumble, Chattanooga's local matchup and voting platform." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Scrumble - Vote on Chattanooga's Best Restaurants, Businesses & More" />
+    <meta property="og:description" content="Scrumble - Vote on Chattanooga's Best Restaurants, Businesses & More on Scrumble, Chattanooga's local matchup and voting platform." />
+    <meta property="og:url" content="https://scrumble.cc/" />
+    <meta property="og:site_name" content="Scrumble" />
+    <meta property="og:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Scrumble - Vote on Chattanooga's Best Restaurants, Businesses & More" />
+    <meta name="twitter:description" content="Scrumble - Vote on Chattanooga's Best Restaurants, Businesses & More on Scrumble, Chattanooga's local matchup and voting platform." />
+    <meta name="twitter:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Scrumble - Vote on Chattanooga's Best Restaurants, Businesses & More",
+      "description": "Scrumble - Vote on Chattanooga's Best Restaurants, Businesses & More on Scrumble, Chattanooga's local matchup and voting platform.",
+      "url": "https://scrumble.cc/",
+      "isPartOf": { "@type": "WebSite", "name": "Scrumble", "url": "https://scrumble.cc/" }
+    }
+    </script>
+    <link rel="icon" type="image/x-icon" href="public/scrumble_favicon.ico" />
     <meta
       name="description"
       content="Daily matchups for Chattanooga. Vote on the best tacos, coffee, mayors, and more. See what the city really thinks."
@@ -13,21 +35,11 @@
     <meta name="keywords" content="Chattanooga, voting, local businesses, restaurants, best of Chattanooga, Scenic City" />
     
     <!-- Open Graph / Social Media Meta Tags -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Scrumble - Vote on Chattanooga's Best" />
-    <meta property="og:description" content="Daily matchups for Chattanooga. Vote on the best tacos, coffee, mayors, and more. See what the city really thinks." />
-    <meta property="og:url" content="https://scrumble.cc" />
-    <meta property="og:site_name" content="Scrumble" />
-    <meta property="og:image" content="https://scrumble.cc/public/white_duck_logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Scrumble - Chattanooga voting game" />
     <meta property="og:locale" content="en_US" />
     
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Scrumble - Vote on Chattanooga's Best" />
-    <meta name="twitter:description" content="Daily matchups for Chattanooga. Vote on the best tacos, coffee, mayors, and more." />
-    <meta name="twitter:image" content="https://scrumble.cc/public/white_duck_logo.png" />
     <meta name="twitter:image:alt" content="Scrumble - Chattanooga voting game" />
     <meta name="twitter:site" content="@scrumble" />
     <meta name="twitter:creator" content="@scrumble" />
