--- a/app/jobs.html
+++ b/app/jobs.html
@@ -4,6 +4,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>We're Hiring - Scrumble</title>
+    <!-- SEO: page meta bundle -->
+    <link rel="canonical" href="https://scrumble.cc/jobs.html" />
+    <meta name="description" content="Open roles at Scrumble for creative and technical contributors." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="We're Hiring - Scrumble" />
+    <meta property="og:description" content="Open roles at Scrumble for creative and technical contributors." />
+    <meta property="og:url" content="https://scrumble.cc/jobs.html" />
+    <meta property="og:site_name" content="Scrumble" />
+    <meta property="og:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="We're Hiring - Scrumble" />
+    <meta name="twitter:description" content="Open roles at Scrumble for creative and technical contributors." />
+    <meta name="twitter:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "We're Hiring - Scrumble",
+      "description": "Open roles at Scrumble for creative and technical contributors.",
+      "url": "https://scrumble.cc/jobs.html",
+      "isPartOf": { "@type": "WebSite", "name": "Scrumble", "url": "https://scrumble.cc/" }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
