--- a/app/partner.html
+++ b/app/partner.html
@@ -4,16 +4,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Partner with Scrumble</title>
-    <meta name="description" content="Sponsor local matchups on Scrumble and reach Chattanooga voters with weekly placements and winner-card mentions." />
+    <!-- SEO: page meta bundle -->
+    <link rel="canonical" href="https://scrumble.cc/partner.html" />
+    <meta name="description" content="Partner with Scrumble for sponsored local matchups and Chattanooga audience reach." />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Partner with Scrumble" />
-    <meta property="og:description" content="Reach Chattanooga locals through sponsored matchups and category placements." />
+    <meta property="og:description" content="Partner with Scrumble for sponsored local matchups and Chattanooga audience reach." />
     <meta property="og:url" content="https://scrumble.cc/partner.html" />
+    <meta property="og:site_name" content="Scrumble" />
     <meta property="og:image" content="https://scrumble.cc/public/white_duck_logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Partner with Scrumble" />
-    <meta name="twitter:description" content="Sponsor local matchups and reach Chattanooga voters." />
+    <meta name="twitter:description" content="Partner with Scrumble for sponsored local matchups and Chattanooga audience reach." />
     <meta name="twitter:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Partner with Scrumble",
+      "description": "Partner with Scrumble for sponsored local matchups and Chattanooga audience reach.",
+      "url": "https://scrumble.cc/partner.html",
+      "isPartOf": { "@type": "WebSite", "name": "Scrumble", "url": "https://scrumble.cc/" }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet" />
