--- a/app/posters.html
+++ b/app/posters.html
@@ -4,6 +4,29 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Scrumble Posters</title>
+    <!-- SEO: page meta bundle -->
+    <link rel="canonical" href="https://scrumble.cc/posters.html" />
+    <meta name="description" content="Explore Scrumble poster art and visual experiments inspired by local culture." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Scrumble Posters" />
+    <meta property="og:description" content="Explore Scrumble poster art and visual experiments inspired by local culture." />
+    <meta property="og:url" content="https://scrumble.cc/posters.html" />
+    <meta property="og:site_name" content="Scrumble" />
+    <meta property="og:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Scrumble Posters" />
+    <meta name="twitter:description" content="Explore Scrumble poster art and visual experiments inspired by local culture." />
+    <meta name="twitter:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Scrumble Posters",
+      "description": "Explore Scrumble poster art and visual experiments inspired by local culture.",
+      "url": "https://scrumble.cc/posters.html",
+      "isPartOf": { "@type": "WebSite", "name": "Scrumble", "url": "https://scrumble.cc/" }
+    }
+    </script>
   <style>
     body { margin: 0; font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; }
     header { padding: 24px; }
@@ -22,8 +45,7 @@
     .lightbox img { max-width: 95vw; max-height: 92vh; border-radius: 10px; }
     .lightbox.show { display: flex; }
     .hint { color: #666; font-size: 14px; padding: 0 24px 12px; }
-  </style>
-</head>
+  </style></head>
 <body>
   <header>
     <h1>Scrumble Posters</h1>
