--- a/app/weekly-recap.html
+++ b/app/weekly-recap.html
@@ -4,6 +4,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Weekly Recap - Scrumble</title>
+    <!-- SEO: page meta bundle -->
+    <link rel="canonical" href="https://scrumble.cc/weekly-recap.html" />
+    <meta name="description" content="Read the weekly recap of top Scrumble matchups and local winners." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Weekly Recap - Scrumble" />
+    <meta property="og:description" content="Read the weekly recap of top Scrumble matchups and local winners." />
+    <meta property="og:url" content="https://scrumble.cc/weekly-recap.html" />
+    <meta property="og:site_name" content="Scrumble" />
+    <meta property="og:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Weekly Recap - Scrumble" />
+    <meta name="twitter:description" content="Read the weekly recap of top Scrumble matchups and local winners." />
+    <meta name="twitter:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Weekly Recap - Scrumble",
+      "description": "Read the weekly recap of top Scrumble matchups and local winners.",
+      "url": "https://scrumble.cc/weekly-recap.html",
+      "isPartOf": { "@type": "WebSite", "name": "Scrumble", "url": "https://scrumble.cc/" }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet" />
