--- a/app/best-tacos-chattanooga.html
+++ b/app/best-tacos-chattanooga.html
@@ -4,7 +4,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Best Tacos in Chattanooga | Scrumble</title>
-    <meta name="description" content="See recent taco-related matchup winners and community picks in Chattanooga." />
+    <!-- SEO: page meta bundle -->
+    <link rel="canonical" href="https://scrumble.cc/best-tacos-chattanooga.html" />
+    <meta name="description" content="See Scrumble taco matchups and discover Chattanooga favorites." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Best Tacos in Chattanooga | Scrumble" />
+    <meta property="og:description" content="See Scrumble taco matchups and discover Chattanooga favorites." />
+    <meta property="og:url" content="https://scrumble.cc/best-tacos-chattanooga.html" />
+    <meta property="og:site_name" content="Scrumble" />
+    <meta property="og:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Best Tacos in Chattanooga | Scrumble" />
+    <meta name="twitter:description" content="See Scrumble taco matchups and discover Chattanooga favorites." />
+    <meta name="twitter:image" content="https://scrumble.cc/public/white_duck_logo.png" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Best Tacos in Chattanooga | Scrumble",
+      "description": "See Scrumble taco matchups and discover Chattanooga favorites.",
+      "url": "https://scrumble.cc/best-tacos-chattanooga.html",
+      "isPartOf": { "@type": "WebSite", "name": "Scrumble", "url": "https://scrumble.cc/" }
+    }
+    </script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
